# robotaksi-sim-2026

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.cjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  commitlint.yml
docs/: README.md
simulation/: README.md
src/decision_planning_control/: README.md
src/decision_planning_control/path_planning_sonHali/: __init__.py  planner_pipeline.py
src/decision_planning_control/path_planning_sonHali/common/: __init__.py  enums.py  geometry.py  types.py  vehicle_params.py
src/decision_planning_control/path_planning_sonHali/config/: sample_mission.geojson
src/decision_planning_control/path_planning_sonHali/decision/: __init__.py  hfsm.py  mission_manager.py  states.py  transitions.py
src/decision_planning_control/path_planning_sonHali/global_planner/: __init__.py  costmap.py  hybrid_astar.py
src/decision_planning_control/path_planning_sonHali/io/: __init__.py  geojson_loader.py  inputs.py  outputs.py
src/localization_mapping/: README.md
src/localization_mapping/bee1_mapping/: CMakeLists.txt  README.md  package.xml
src/localization_mapping/bee1_mapping/config/: ekf.yaml  pointcloud_to_laserscan.yaml  slam_toolbox_mapping.yaml
src/localization_mapping/bee1_mapping/launch/: mapping.launch.py  save_map.launch.py
src/parking_docking/: README.md  durak_algorithm.py
src/parking_docking/otonom_park/: README.md  direct_park.py  tabela_tespit_3d.py
src/perception/: README.md  lane_follower.py  obstacle_detection.py  yolo_sign_detection.py
tests/: README.md  conftest.py
(+33 files in other folders)
